@@ -1,8 +1,12 @@
 package com.agh.hydra.referral.service;
 
 import com.agh.hydra.common.model.UserId;
+import com.agh.hydra.referral.model.ReferralAnnouncement;
 import com.agh.hydra.referral.request.CreateReferralRequest;
+import com.agh.hydra.referral.request.ReferralAnnouncementFilterRequest;
 import com.agh.hydra.referral.request.ReferralAnnouncementRequest;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 
 import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
@@ -25,4 +29,12 @@ public interface IReferralService {
      */
     void invalidateReferralAnnouncement(@Valid @NotNull ReferralAnnouncementRequest request,
                                         @Valid @NotNull UserId userId);
+
+    /**
+     * @param request  filter request
+     * @param pageable pageable
+     * @return filtered, paged and detailed referral announcement list
+     */
+    Page<ReferralAnnouncement> getReferralAnnouncement(@Valid ReferralAnnouncementFilterRequest request,
+                                                       @NotNull Pageable pageable);
 }
